<resources>
    <string name="app_name">Market Fanatic</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_market_list">MarketListActivity</string>
    <string name="title_activity_market_detail">MarketDetailActivity</string>

    <!-- MainActivity -->
    <string name="search_markets">Search for markets</string>
    <string name="search_hint">Search city or zip</string>
    <string name="or">or</string>
    <string name="use_location">Use my location</string>
    <string name="filter">Filter</string>
    <string name="markets_within">markets within</string>
    <string name="fifteen">15</string>
    <string name="favorite_markets">Favorite markets</string>
    <string name="no_favorites">Nothing appears to be here!</string>

    <string name="enable_location_prompt">Please enable location services</string>
    <string name="enable">Enable</string>
    <string name="fetching_location">Fetching location...</string>
    <string name="location_error">Error getting location...</string>
    <string name="location_permission_rationale">The device location is needed to show markets nearby</string>

    <string name="about">About</string>
    <string name="usda"><b>Disclaimer:</b>\nThis product uses USDA’s National Farmers Market API but is not endorsed or certified by USDA.</string>
    <string name="icon_attr"><b>Icon created by:</b>\nValeriaboikova@gmail.com</string>
    <string name="ok">OK</string>

    <!-- MarketListActivity -->
    <string name="markets">Markets</string>
    <string name="miles">miles</string>
    <string name="no_markets">No markets!</string>
    <string name="network_failure">Failed to get data!</string>
    <string name="try_again">Try again</string>
    <string name="open_in_maps">Open in Google Maps</string>
    <string name="view_market_details">View market details</string>

    <string name="no_maps_installed">Google Maps not installed!</string>

    <!-- MarketDetailActivity -->
    <string name="added_to_favorites">Added to favorites</string>
    
    <!-- MarketDetailFragment -->
    <string name="market_name">Market Name:\u0020</string>
    <string name="address">Address:\u0020</string>
    <string name="location">Location:\u0020</string>
    <string name="dates">Dates:\u0020</string>
    <string name="times">Times:\u0020</string>
    <string name="last_update_time">Last Update Time:\u0020</string>
    <string name="website">Website:\u0020</string>
    <string name="facebook">Facebook:\u0020</string>
    <string name="twitter">Twitter:\u0020</string>
    <string name="other_media">Other Media:\u0020</string>

    <string name="credit">Credit:\u0020</string>
    <string name="organic">Organic:\u0020</string>
    <string name="snap">Snap:\u0020</string>
    <string name="sfmnp">Sfmnp:\u0020</string>
    <string name="wic">Wic:\u0020</string>
    <string name="wic_cash">Wic Cash:\u0020</string>

</resources>
